agregandole imagnes al carrousel

--- a/index.html
+++ b/index.html
@@ -87,6 +87,35 @@
         <div class="caja-img-series">
             <img class="img-series" src="assets-tp/preview-4.jpg">
         </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-4.jpg">
+        </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-4.jpg">
+        </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-14.jpg">
+        </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-12.jpg">
+        </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-13.jpg">
+        </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-8.jpg">
+        </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-4.jpg">
+        </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-4.jpg">
+        </div>
+        <div class="caja-img-series">
+            <img class="img-series" src="assets-tp/preview-4.jpg">
+        </div>
+        
+        
         <!-- <div class="caja-img-series">
             <img class="img-series" src="assets-tp/preview-13.jpg">
         </div> -->
